--- a/asp_mvc_2/Views/Account/SignUp.cshtml
+++ b/asp_mvc_2/Views/Account/SignUp.cshtml
@@ -105,7 +105,6 @@ new SelectListItem { Text="Female", Value="F" }
             </div>
         </div>
     </div>
-} 
-<div>
+} <div>
 @Html.ActionLink("Back to Main", "Index", "Home")
 </div>
