--- a/asp_mvc_2/Views/Home/AdminOnly.cshtml
+++ b/asp_mvc_2/Views/Home/AdminOnly.cshtml
@@ -5,5 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AdminOnly</h2>
+<h2>For Admin users only!</h2>
 
+<div id="divUserListContainer">
+    @Html.Action("ManageUserPartial", "Home");
+</div>
